--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-    <h1>Page title</h1>
+    <h1>Page title 2</h1>
     <ul>
       <li> green</li>
       <li>red</li>
